--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
+  <head>
+    <meta name="google-signin-client_id" content="787710583064-8mq1jd9vfqdo8gb07u4g9nua0k2q75ap.apps.googleusercontent.com.apps.googleusercontent.com">
+  </head>
   <body>
     testing
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
   </body>
 </html>
