--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+    Homework Information Service
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <div id="g_id_onload"
          data-client_id="787710583064-8mq1jd9vfqdo8gb07u4g9nua0k2q75ap.apps.googleusercontent.com"
