--- a/index.html
+++ b/index.html
@@ -7,5 +7,22 @@
          data-callback="handleCredentialResponse">
     </div>
     <div class="g_id_signin" data-type="standard"></div>
+    Test
+    <div id="g_id_onload"
+     data-client_id="787710583064-8mq1jd9vfqdo8gb07u4g9nua0k2q75ap.apps.googleusercontent.com"
+     data-context="signin"
+     data-ux_mode="popup"
+     data-login_uri="https://gopstnm.github.io/HWI/"
+     data-itp_support="true">
+</div>
+
+<div class="g_id_signin"
+     data-type="standard"
+     data-shape="rectangular"
+     data-theme="outline"
+     data-text="signin_with"
+     data-size="large"
+     data-logo_alignment="left">
+</div>
   </body>
 </html>
