--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="g_id_signin" data-type="standard"></div>
     Test
     <div id="g_id_onload"
-     data-client_id="787710583064-8mq1jd9vfqdo8gb07u4g9nua0k2q75ap.apps.googleusercontent.com"
+     data-client_id="116207718284350135727.apps.googleusercontent.com"
      data-context="signin"
      data-ux_mode="popup"
      data-login_uri="https://gopstnm.github.io/HWI/"
