--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <html>
   <body>
-    Homework Information Service
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <div id="g_id_onload"
-         data-client_id="787710583064-8mq1jd9vfqdo8gb07u4g9nua0k2q75ap.apps.googleusercontent.com"
-         data-callback="handleCredentialResponse">
-    </div>
-    <div class="g_id_signin" data-type="standard"></div>
+    Homework Information Service </br>
     Test
     <div id="g_id_onload"
-     data-client_id="116207718284350135727.apps.googleusercontent.com"
+     data-client_id="663461698024-ud6h22552tu104mhv8tt494jfkdqjvbu.apps.googleusercontent.com"
      data-context="signin"
      data-ux_mode="popup"
      data-login_uri="https://gopstnm.github.io/HWI/"
