--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
      data-text="signin_with"
      data-size="large"
      data-logo_alignment="left">
+
+
+
+
+  <div id="g_id_onload"
+     data-client_id="663461698024-ud6h22552tu104mhv8tt494jfkdqjvbu.apps.googleusercontent.com"
+     data-context="signup"
+     data-ux_mode="popup"
+     data-login_uri="https://gopstnm.github.io/HWI/"
+     data-nonce=""
+     data-itp_support="true">
+</div>
+
+<div class="g_id_signin"
+     data-type="icon"
+     data-shape="square"
+     data-theme="outline"
+     data-text="signin_with"
+     data-size="large">
+</div>
 </div>
   </body>
 </html>
