--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
      data-text="signin_with"
      data-size="large"
      data-logo_alignment="left">
-
-
-
-
+Testing 2
   <div id="g_id_onload"
      data-client_id="663461698024-ud6h22552tu104mhv8tt494jfkdqjvbu.apps.googleusercontent.com"
      data-context="signup"
