--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
      data-client_id="59075011758-6q12f2jbb622cqg0bhpkors92kkc516p.apps.googleusercontent.com"
      data-context="signin"
      data-ux_mode="popup"
-     data-login_uri="https://gopstnm.github.io/HWI/"
+     data-login_uri="https://gopstnm.github.io/HWI/test.html"
      data-itp_support="true">
 </div>
-
 <div class="g_id_signin"
      data-type="standard"
      data-shape="rectangular"
