--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
     Test
-    <div id="g_id_onload"
-     data-client_id="59075011758-6q12f2jbb622cqg0bhpkors92kkc516p.apps.googleusercontent.com"
+   <div id="g_id_onload"
+     data-client_id="29045455352-asqqnrbs3v8rm2nvqnvb7vlf1m88586c.apps.googleusercontent.com"
      data-context="signin"
      data-ux_mode="popup"
-     data-login_uri="https://gopstnm.github.io/HWI/test.html"
-     data-itp_support="true">
+     data-callback="login"
+     data-nonce=""
+     data-itp_support="false">
 </div>
+
 <div class="g_id_signin"
      data-type="standard"
      data-shape="rectangular"
      data-theme="outline"
      data-text="signin_with"
      data-size="large"
+     data-locale="en-GB"
      data-logo_alignment="left">
 </div>
   </body>
