--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
      data-locale="en-GB"
      data-logo_alignment="left">
 </div>
+    <script>
+      function login () {
+        alert("Logged in but no info can be shown");
+      }
+    </script>
   </body>
 </html>
