--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     Test
    <div id="g_id_onload"
      data-client_id="29045455352-asqqnrbs3v8rm2nvqnvb7vlf1m88586c.apps.googleusercontent.com"
-     data-context="signin"
+     data-context="use"
      data-ux_mode="popup"
      data-callback="login"
      data-nonce=""
