--- a/info.html
+++ b/info.html
@@ -1,1 +1,13 @@
-
+<html>
+  <body>
+    <script src="https://accounts.google.com/gsi/client" async></script>
+    Homework Information Service </br>
+    Test
+   
+    <script>
+      function login () {
+        alert("Logged in but no info can be shown");
+      }
+    </script>
+  </body>
+</html>
