--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
      data-locale="en-GB"
      data-logo_alignment="left">
 </div>
+    I am a line ----
+    <div id="g_id_onload"
+     data-client_id="29045455352-asqqnrbs3v8rm2nvqnvb7vlf1m88586c.apps.googleusercontent.com"
+     data-context="use"
+     data-ux_mode="redirect"
+     data-login_uri="https://gopstnm.github.io/HWI/info.html"
+     data-nonce=""
+     data-auto_prompt="false">
+</div>
+
+<div class="g_id_signin"
+     data-type="standard"
+     data-shape="rectangular"
+     data-theme="outline"
+     data-text="signin"
+     data-size="large"
+     data-locale="en-GB"
+     data-logo_alignment="left">
+</div>
     <script>
       function login () {
         alert("Logged in but no info can be shown");
