--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
     Test
-  
-    I am a line ----
-    <div id="g_id_onload"
+<div id="g_id_onload"
      data-client_id="29045455352-asqqnrbs3v8rm2nvqnvb7vlf1m88586c.apps.googleusercontent.com"
-     data-context="use"
-     data-ux_mode="redirect"
-     data-login_uri="https://gopstnm.github.io/HWI/info.html"
+     data-context="signin"
+     data-ux_mode="popup"
+     data-callback="testuser"
      data-nonce=""
      data-auto_prompt="false">
 </div>
@@ -23,10 +21,5 @@
      data-locale="en-GB"
      data-logo_alignment="left">
 </div>
-    <script>
-      function login () {
-        alert("Logged in but no info can be shown");
-      }
-    </script>
   </body>
 </html>
