--- a/info.html
+++ b/info.html
@@ -4,6 +4,7 @@
     Homework Information Service </br>
     Test
    <script>
+     google.accounts.id.initialize(IdConfiguration)
   window.onload = function () {
     google.accounts.id.initialize({
       client_id: '29045455352-bl0k3pkltfp3qc7gbh9j4cua8n40v1mb.apps.googleusercontent.com',
