--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      data-client_id="29045455352-bl0k3pkltfp3qc7gbh9j4cua8n40v1mb.apps.googleusercontent.com"
      data-context="signin"
      data-ux_mode="popup"
-     data-login_uri="https://gopstnm.github.io/HWI/info.html"
+     data-callback="login"
      data-nonce=""
      data-auto_prompt="false">
 </div>
