--- a/info.html
+++ b/info.html
@@ -3,20 +3,14 @@
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
     Test
-   <script>
-     google.accounts.id.initialize(IdConfiguration)
-  window.onload = function () {
-    google.accounts.id.initialize({
-      client_id: '29045455352-bl0k3pkltfp3qc7gbh9j4cua8n40v1mb.apps.googleusercontent.com',
-      callback: handleCredentialResponse
-    });
-    google.accounts.id.prompt();
-  };
-</script>
     <script>
-      function login () {
-        alert("Logged in but no info can be shown");
-      }
-    </script>
+function onSignIn(googleUser) {
+  var profile = googleUser.getBasicProfile();
+  alert('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+  alert('Name: ' + profile.getName());
+  alert('Image URL: ' + profile.getImageUrl());
+  alert('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+}
+  </script>
   </body>
 </html>
