--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
      data-locale="en-GB"
      data-logo_alignment="left">
 </div>
+    <script>
+      function login() {
+        location.replace("https://gopstnm.github.io/HWI/info.html")
+      }
+    </script>
   </body>
 </html>
