--- a/info.html
+++ b/info.html
@@ -2,15 +2,6 @@
   <body>
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
-    Test
-    <script>
-function onSignIn(googleUser) {
-  var profile = googleUser.getBasicProfile();
-  alert('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
-  alert('Name: ' + profile.getName());
-  alert('Image URL: ' + profile.getImageUrl());
-  alert('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-}
-  </script>
+    Test - You have logged in
   </body>
 </html>
