--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 </div>
     <script>
       function login() {
-        location.replace("https://gopstnm.github.io/HWI/info.html")
+        location.replace("https://gopstnm.github.io/HWI/info.html");
+        alert("hi");
       }
     </script>
   </body>
