--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <html>
   <body>
     <script src="https://accounts.google.com/gsi/client" async></script>
-    Homework Information Service </br>
-    Test
-<div id="g_id_onload"
-     data-client_id="29045455352-bl0k3pkltfp3qc7gbh9j4cua8n40v1mb.apps.googleusercontent.com"
-     data-context="signin"
-     data-ux_mode="popup"
-     data-callback="login"
-     data-nonce=""
-     data-auto_prompt="false">
-</div>
-
-<div class="g_id_signin"
-     data-type="standard"
-     data-shape="rectangular"
-     data-theme="outline"
-     data-text="signin"
-     data-size="large"
-     data-locale="en-GB"
-     data-logo_alignment="left">
-</div>
+    Homework Information Service</br>
+    Login Page
+    <div id="g_id_onload"
+      data-client_id="29045455352-bl0k3pkltfp3qc7gbh9j4cua8n40v1mb.apps.googleusercontent.com"
+      data-context="signin"
+      data-ux_mode="popup"
+      data-callback="login"
+      data-nonce=""
+      data-auto_prompt="false"></div>
+    <div class="g_id_signin"
+      data-type="standard"
+      data-shape="rectangular"
+      data-theme="outline"
+      data-text="signin"
+      data-size="large"
+      data-locale="en-GB"
+      data-logo_alignment="left"></div>
     <script>
       function login() {
         alert("hi");
