--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
       data-size="large"
       data-locale="en-GB"
       data-logo_alignment="left"></div>
+    <div id="g_id_onload"
+     data-client_id="29045455352-bl0k3pkltfp3qc7gbh9j4cua8n40v1mb.apps.googleusercontent.com"
+     data-context="signin"
+     data-ux_mode="redirect"
+     data-login_uri="https://gopstnm.github.io/HWI/info.html"
+     data-callback="login"
+     data-nonce=""
+     data-auto_prompt="false">
+</div>
+
+<div class="g_id_signin"
+     data-type="standard"
+     data-shape="rectangular"
+     data-theme="outline"
+     data-text="signin"
+     data-size="large"
+     data-locale="en-GB"
+     data-logo_alignment="left">
+</div>
     <script>
       function login() {
         alert("hi");
