--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <div id="g_id_onload"
      data-client_id="29045455352-bl0k3pkltfp3qc7gbh9j4cua8n40v1mb.apps.googleusercontent.com"
      data-context="signin"
-     data-ux_mode="redirect"
-     data-login_uri="https://gopstnm.github.io/HWI/info.html"
+     data-ux_mode="popup"
      data-callback="login"
      data-nonce=""
      data-auto_prompt="false">
