--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
     Test - You have logged in
-    <a href="https://gopstnm.github.io/HWI/" onclick="signOut();">S<button type="button" onclick="signOut();">Click Me to Sign Out</button>
+    <button type="button" onclick="signOut();">Click Me to Sign Out</button>
 <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
