--- a/info.html
+++ b/info.html
@@ -3,17 +3,14 @@
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
     Test - You have logged in
-    <button type="button" onclick="signOut()">Click Me to Sign Out</button>
+    <button type="button" onclick="signOut();">Click Me to Sign Out</button>
 <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
     auth2.signOut().then(function () {
       console.log('User signed out.');
     });
-    location.replace("https://gopstnm.github.io/HWI/")
-  }
-  function login() {
-    alert("hi");
+    location.replace("https://gopstnm.github.io/HWI/");
   }
 </script>
   </body>
