--- a/info.html
+++ b/info.html
@@ -2,15 +2,15 @@
   <body>
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
-    Test - You have logged in
-    <button type="button" onclick="signOut();">Click Me to Sign Out</button>
+    Test - You have logged in </br>
+    <input type="button" onclick="signOut ()" value="Sign Out">
 <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
     auth2.signOut().then(function () {
       console.log('User signed out.');
     });
-    location.replace("https://gopstnm.github.io/HWI/");
+    location.replace("https://gopstnm.github.io/HWI/")
   }
 </script>
   </body>
