--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
     auth2.signOut().then(function () {
       console.log('User signed out.');
     });
-    location.replace("https://gopstnm.github.io/HWI/")
+    //location.replace("https://gopstnm.github.io/HWI/")
   }
 </script>
   </body>
