--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
     auth2.signOut().then(function () {
-      location.replace("https://gopstnm.github.io/HWI/")
+      location.reload();
     });
     //location.replace("https://gopstnm.github.io/HWI/")
   }
