--- a/info.html
+++ b/info.html
@@ -7,9 +7,8 @@
 <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
-    auth2.signOut().then(function () {
-      location.reload();
-    });
+    auth2.signOut();
+    location.reload();
   }
 </script>
   </body>
