--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
     Test - You have logged in </br>
-    <input type="button" onclick="signOut ()" value="Sign Out">
+    <input type="button" onclick="signOut();" value="Sign Out">
 <script>
   function signOut() {
     var auth2 = gapi.auth2.getAuthInstance();
