--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
     <script src="https://accounts.google.com/gsi/client" async></script>
     Homework Information Service </br>
     Test - You have logged in </br>
-    <a href="https://gopstnm.github.io/HWI/" onclick="signOut();">Sign out</a>
+    <a href="#" onclick="signOut();">Sign out</a>
     <script>
       function signOut() {
         var auth2 = gapi.auth2.getAuthInstance();
